# AEGIS-MESH

.github/workflows/: build-apk.yml  ci.yml
aegis-mesh/: .gitignore  BUILD-APK.md  Cargo.toml  LICENSE  README.md  build-apk.sh
aegis-mesh/.github/workflows/: build-apk.yml
aegis-mesh/android/: build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
aegis-mesh/android/app/: build.gradle.kts  proguard-rules.pro
aegis-mesh/android/app/src/main/: AndroidManifest.xml
aegis-mesh/android/app/src/main/java/network/aegis/mesh/: AegisApp.kt  BootReceiver.kt  MainActivity.kt  MeshForegroundService.kt
aegis-mesh/android/app/src/main/java/network/aegis/mesh/ble/: BleMeshManager.kt
aegis-mesh/android/app/src/main/java/network/aegis/mesh/di/: AppModule.kt
aegis-mesh/android/app/src/main/java/network/aegis/mesh/ffi/: AegisFFI.kt
aegis-mesh/android/app/src/main/java/network/aegis/mesh/ui/: Navigation.kt  PeerListScreen.kt
aegis-mesh/android/app/src/main/java/network/aegis/mesh/ui/screen/: ChannelListScreen.kt  ChatScreen.kt  OnboardingScreen.kt  PeerListScreen.kt  ScanScreen.kt  SettingsScreen.kt
aegis-mesh/android/app/src/main/java/network/aegis/mesh/ui/theme/: Theme.kt
aegis-mesh/android/app/src/main/res/values/: strings.xml  themes.xml
aegis-mesh/crates/aegis-cli/: Cargo.toml
aegis-mesh/crates/aegis-cli/src/: context.rs  main.rs
aegis-mesh/crates/aegis-cli/src/commands/: identity.rs  mod.rs  peers.rs  send.rs  serve.rs  wipe.rs
aegis-mesh/crates/aegis-core/: Cargo.toml
aegis-mesh/crates/aegis-core/src/: config.rs  error.rs  lib.rs
aegis-mesh/crates/aegis-core/src/crypto/: aead.rs  fingerprint.rs  identity.rs  keystore.rs  mod.rs  signal.rs  x25519.rs
aegis-mesh/crates/aegis-core/src/mesh/: mod.rs  peer.rs  router.rs  store_forward.rs
aegis-mesh/crates/aegis-core/src/messaging/: channel.rs  envelope.rs  mod.rs  priority.rs
aegis-mesh/crates/aegis-core/src/storage/: mod.rs  sqlite.rs
aegis-mesh/crates/aegis-core/src/transport/: ble.rs  loopback.rs  lora.rs  mod.rs
aegis-mesh/crates/aegis-ffi/: Cargo.toml
aegis-mesh/crates/aegis-ffi/src/: lib.rs
aegis-mesh/docs/: SECURITY.md
download/: README.md
