[workspace]
resolver = "2"
members = [
    "crates/aegis-core",
    "crates/aegis-cli",
    "crates/aegis-ffi",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
license = "AGPL-3.0-or-later"
authors = ["AEGIS-MESH Contributors"]
repository = "https://github.com/aegis-mesh/aegis-mesh"
description = "Ultra-censorship-resistant communication platform"

[workspace.dependencies]
# Crypto
ed25519-dalek = { version = "2.1", features = ["pkcs8", "pem", "rand_core", "zeroize"] }
x25519-dalek = { version = "2.0", features = ["static_secrets", "reusable_secrets", "zeroize"] }
curve25519-dalek = { version = "4.1", features = ["zeroize"] }
aes-gcm = "0.10"
aead = "0.5"
chacha20poly1305 = "0.10"
sha2 = "0.10"
hkdf = "0.12"
hmac = "0.12"
rand = "0.8"
rand_core = "0.6"
zeroize = { version = "1.7", features = ["derive"] }
subtle = "2.5"
argon2 = "0.5"
bip39 = { version = "2.0", features = ["rand"] }

# Async + runtime
tokio = { version = "1.36", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bytes = "1.5"

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }

# Transport
serialport = "4.3"

# Logging + errors
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
directories = "5.0"
qrcode = "0.14"

# UniFFI
uniffi = { version = "0.27", features = ["cli"] }

# Internal
aegis-core = { path = "crates/aegis-core", version = "0.2.0" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
debug = true
