[package]
name = "aegis-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for AEGIS-MESH: crypto, mesh routing, transports, storage"

[lib]
name = "aegis_core"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
curve25519-dalek = { workspace = true }
aes-gcm = { workspace = true }
aead = { workspace = true }
sha2 = { workspace = true }
hkdf = { workspace = true }
hmac = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
zeroize = { workspace = true }
subtle = { workspace = true }
argon2 = { workspace = true }
bip39 = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
bytes = { workspace = true }

rusqlite = { workspace = true }

serialport = { workspace = true, optional = true }


tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

once_cell = "1.19"
hex = { version = "0.4", features = ["serde"] }
base64 = "0.22"
directories = { workspace = true }
time = { version = "0.3", features = ["formatting", "macros"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
proptest = "1.4"
tempfile = "3.10"


[features]
default = []
std-serial = ["dep:serialport"]
